[tool.poetry]
name = "randomorg-api-python-implementation-v4"
version = "1.0.0"
description = "Custom test implementation of Python client for Random.org API v4"
authors = ["selfkilla666 <selfkilla666@yahoo.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
types-requests = "^2.31.0.20240311"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
